--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <title>Badabit - Crypto</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/img/logo.svg" alt="logo">
+        <div class="header--title-container">
+            <h1>La proxima revolucion en el intercambio de Cryptomonedas</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header--button">Conoce Nuestros Planes <span>i</span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
