till plan cards is done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header--title-container">
             <h1>La proxima revolucion en el intercambio de Cryptomonedas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
+            <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
@@ -27,12 +27,109 @@
                 <p>Traemos informacion en tiempo real de las casas de cambio y las monedas mas importantes del mundo crypto.</p>
             </div>
             <section class="main-tables-container">
-                <div></div>
+                <div class="tables-container">
+                        <p class="tables-container--title tables-container--title-orange">Monedas</p>
+                        <p class="tables-container--update-text"> <b>Actualizado:</b> 30 Nov 23:45</p>
+                        <div class="tables-container-info">
+                            <span class="tables-container-info--name">Bitcoin</span>
+                            <span class="tables-container-info--price">$1.96 <span class="tables-container-info--icon"><img src="./assets/icons/trending-down.svg" alt="trending-down-arrow"> </span> </span>
+                            <span class="tables-container-info--name">Ethereum</span>
+                            <span class="tables-container-info--price">$0.07 <span class="tables-container-info--icon"><img src="./assets/icons/trending-up.svg" alt="trending-up-arrow"> </span> </span>
+                            <span class="tables-container-info--name">Ripple</span>
+                            <span class="tables-container-info--price">$2.15 <span class="tables-container-info--icon"><img src="./assets/icons/trending-down.svg" alt="trending-down-arrow"> </span> </span>
+                            <span class="tables-container-info--name">Stellar</span>
+                            <span class="tables-container-info--price">$4.96 <span class="tables-container-info--icon"><img src="./assets/icons/trending-down.svg" alt="trending-down-arrow"> </span> </span>
+                        </div> 
+                </div>
+                <div class="tables-container2">
+                    <p class="tables-container--title tables-container--title-blue">Comisiones</p>
+                    <p class="tables-container--update-text"> <b>Actualizado:</b> 30 Nov 23:48</p>
+                    <div class="tables-container-info">
+                        <span class="tables-container-info--name">Bitrade</span>
+                        <span class="tables-container-info--price">$12.96</span>
+                        <span class="tables-container-info--name">Bitpreco</span>
+                        <span class="tables-container-info--price">$13.07</span>
+                        <span class="tables-container-info--name">Novadax</span>
+                        <span class="tables-container-info--price">$13.15</span>
+                        <span class="tables-container-info--name">Coinext</span>
+                        <span class="tables-container-info--price">$14.96</span>
+                    </div>
+                </div>
             </section>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparacion.</h2>
+                <p>Confiable y disenado para su uso diario.</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <img class="icon" src="./assets/icons/clock.svg" alt="clock">
+                    <p class="product--card-title">Tiempo real</p>
+                    <p class="product--card-body">Nuestro API toma informacion minuto a minuto sobre las tasas que mas determinan el comportamiento.</p>
+                </article>
+                <article class="product-detail--card">
+                    <img src="./assets/icons/eye.svg" alt="icon" class="eye">
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estas adquiriendo.</p>
+                </article>
+                <article class="product-detail--card">
+                    <img src="./assets/icons/dollar-sign.svg" alt="dollar-sign" class="icon">
+                    <p class="product--card-title">Compara monedas</p>
+                    <p class="product--card-body">No mas rumores, con Batabit sabras el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product-detail--card">
+                    <img src="./assets/icons/check-circle.svg" alt="check-circle" class="icon">
+                    <p class="product--card-title">Informacion confiable</p>
+                    <p class="product--card-body">Nuestras fuentes estan 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
+        <section class="bitcoin-img-container">
+            <h2>Conocelo hoy.</h2>
+        </section>
+
+        <section id="plans" class="main-plans-container">
+
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+
+            <section class="plans-container--slider">
+                
+                <article class="plans-container--card">
+                    <p class="recomendado recomendado-grey">Basic</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$ </span>25</p>
+                        <p class="plan-card--saving">*Disfruta de los beneficios por un pago mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recomendado recomendado-blue">Plus</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">6 Meses</h3>
+                        <p class="plan-card--price"><span>$ </span>50</p>
+                        <p class="plan-card--saving">*Ahorras mucho comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recomendado recomendado-orange">Premium</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$ </span>99</p>
+                        <p class="plan-card--saving">*Descuentazo!</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+            </section>
+
+        </section>
+
     </main>
     <footer></footer>
 </body>
