--- a/index.html
+++ b/index.html
@@ -89,16 +89,14 @@
         <section class="bitcoin-img-container">
             <h2>Conocelo hoy.</h2>
         </section>
-
-        <section id="plans" class="main-plans-container">
+        <section class="main-plans-container">
 
             <div class="plans--title">
                 <h2>Escoge el plan que mejor se ajuste a ti.</h2>
                 <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
             </div>
 
-            <section class="plans-container--slider">
-                
+            <section id="plans" class="plans-container--slider">
                 <article class="plans-container--card">
                     <p class="recomendado recomendado-grey">Basic</p>
                     <div class="plan-info-container">
@@ -127,10 +125,19 @@
                     </div>
                 </article>
             </section>
-
         </section>
-
     </main>
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/img/logo-footer.svg" alt="logo de Batabit 2022">
+        </section>
+    </footer>
 </body>
 </html>
